--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,14 @@
 {
-  "name": "rugalib/ruga-skeleton",
-  "description": "Template for rugalib components",
+  "name": "rugalib/ruga-db-user",
+  "description": "User table",
   "license": "BSD-3-Clause",
   "homepage": "https://github.com/rugalib",
   "type": "library",
   "require": {
-    "php": "^7.4"
+    "php": "^7.4",
+    "psr/container": "^1.0",
+    "rugalib/ruga-log": "^1.0",
+    "rugalib/ruga-db": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
@@ -13,7 +16,10 @@
     "laminas/laminas-servicemanager": "^3"
   },
   "repositories": [
-    {"type": "vcs", "url": "https://github.com/rugalib/ruga-std.git"}
+    {
+      "type": "composer",
+      "url": "https://packages.rugalib.ch/"
+    }
   ],
   "authors": [
     {
@@ -23,18 +29,18 @@
   ],
   "autoload": {
     "psr-4": {
-      "Ruga\\Skeleton\\": "src/"
+      "Ruga\\User\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Ruga\\Skeleton\\Test\\": "test/src"
+      "Ruga\\User\\Test\\": "test/src"
     }
   },
   "extra": {
     "laminas": {
-      "component": "Ruga\\Skeleton",
-      "config-provider": "Ruga\\Skeleton\\ConfigProvider"
+      "component": "Ruga\\User",
+      "config-provider": "Ruga\\User\\ConfigProvider"
     }
   }
 }
