--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "rugalib/ruga-db-user",
   "description": "User table",
-  "license": "BSD-3-Clause",
+  "license": "AGPL-3.0-only",
   "homepage": "https://github.com/rugalib",
   "type": "library",
   "require": {
